[gd_scene load_steps=15 format=3 uid="uid://bk3n0pt5p4w8e"]

[ext_resource type="Script" uid="uid://p2rx2hthxwkh" path="res://components/GeneralLevel/Pause/pause_menu.gd" id="1_2xvko"]
[ext_resource type="Texture2D" uid="uid://sc6ddxcjdr3" path="res://assets/Star/Starbox box 1.png" id="2_xqvr7"]
[ext_resource type="Texture2D" uid="uid://igtl0766a4ti" path="res://assets/Buttons/Button home.webp" id="3_dvugw"]
[ext_resource type="Texture2D" uid="uid://bkqeiii7cqrik" path="res://assets/Buttons/Button continue.webp" id="4_om3fl"]
[ext_resource type="Texture2D" uid="uid://d2euwyav3w2oc" path="res://assets/Buttons/Button refresh.webp" id="5_ngdk8"]
[ext_resource type="StyleBox" uid="uid://cj5x60ipver5t" path="res://components/GeneralLevel/Pause/slidevolume.tres" id="6_uuhll"]
[ext_resource type="FontFile" uid="uid://c37vo61y0brq1" path="res://assets/Fonts/your-doodle-font/Your Doodle Font.ttf" id="7_dvugw"]
[ext_resource type="Texture2D" uid="uid://l041a3lem02" path="res://assets/Buttons/Button music mute.webp" id="8_l1gk0"]
[ext_resource type="Texture2D" uid="uid://vpgn0ahx5scm" path="res://assets/Buttons/Button mute.webp" id="9_21rhq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l7jjs"]
texture = ExtResource("2_xqvr7")

[sub_resource type="CanvasTexture" id="CanvasTexture_djdea"]

[sub_resource type="CanvasTexture" id="CanvasTexture_uuhll"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l7jjs"]
bg_color = Color(1, 0.802417, 0.421247, 1)
border_width_left = 70
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.917647, 0.666667, 0.188235, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
expand_margin_left = 70.0
expand_margin_top = 16.0
expand_margin_right = 6.0
expand_margin_bottom = 16.0

[sub_resource type="LabelSettings" id="LabelSettings_om3fl"]
font = ExtResource("7_dvugw")
font_size = 18

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_2xvko")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.470588)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_l7jjs")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -191.5
offset_top = 125.0
offset_right = 191.5
offset_bottom = 250.0
grow_horizontal = 2
alignment = 1

[node name="Home" type="TextureButton" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture_normal = ExtResource("3_dvugw")
ignore_texture_size = true
stretch_mode = 0

[node name="Resume" type="TextureButton" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture_normal = ExtResource("4_om3fl")
ignore_texture_size = true
stretch_mode = 0

[node name="Retry" type="TextureButton" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture_normal = ExtResource("5_ngdk8")
ignore_texture_size = true
stretch_mode = 0

[node name="VolumeSlider" type="HSlider" parent="Panel"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = 17.0
offset_right = 210.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/center_grabber = 1
theme_override_icons/grabber = SubResource("CanvasTexture_djdea")
theme_override_icons/grabber_highlight = SubResource("CanvasTexture_uuhll")
theme_override_styles/slider = SubResource("StyleBoxFlat_l7jjs")
theme_override_styles/grabber_area = ExtResource("6_uuhll")
theme_override_styles/grabber_area_highlight = ExtResource("6_uuhll")
value = 50.0

[node name="Label" type="Label" parent="Panel/VolumeSlider"]
layout_mode = 0
offset_left = -62.0
offset_top = 8.0
offset_right = -3.0
offset_bottom = 31.0
text = "Musik"
label_settings = SubResource("LabelSettings_om3fl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MuteButton" type="TextureButton" parent="Panel"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -202.0
offset_right = 75.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 0
toggle_mode = true
texture_normal = ExtResource("8_l1gk0")
texture_pressed = ExtResource("9_21rhq")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="Panel/HBoxContainer/Home" to="." method="_on_BackToMapButton_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Resume" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Retry" to="." method="_on_Retry_pressed"]
